# librime-predict

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/: luna_pinyin.custom.yaml  sample.txt
src/: predict_db.cc  predict_db.h  predict_engine.cc  predict_engine.h  predict_module.cc  predict_translator.cc  predict_translator.h  predictor.cc  predictor.h
tools/: CMakeLists.txt  build_predict.cc
tools/make_predict_data/: Cargo.toml
tools/make_predict_data/src/: main.rs
